# RustySharing-Client

./: .gitignore  Cargo.toml  README.md  build.rs  client_results.txt  client_results_1.txt  client_results_2.txt  client_results_3.txt  exp1.sh  experiment.sh  metrics_20241103_043353.csv  metrics_20241103_044014.csv  metrics_20241103_044922.csv  metrics_20241103_045142.csv  metrics_20241103_050407.csv  no_balancing_2.txt  no_balancing_3.txt  plot_graph.py  raw_output.txt  rpc_client.shell.nix
plot_graph/: pyvenv.cfg
proto/: image_encoding.proto  leader_provider.proto  peer_to_peer.proto
src/: client.rs  clientserver.rs  gui_driver.rs  image_decode.rs  image_encode_service.rs  lib.rs  main.rs  simple_request_service.rs  utils.rs
