[package]
name = "rpc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tonic-build = "0.12.3"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_12"] }
image = "0.21.3"
# Protocol buffer implementation

prost = "0.13.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
steganography = "1.0.2"
tokio = {version = "1.41.0", features=["macros","rt-multi-thread"]}

# Grpc implementation
tonic = "0.12.3"


[[bin]]
name = "rpc_client"
path = "src/client.rs"
