[package]
name = "rudp_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rudp = "0.2" # Check for the latest version on crates.io
serde = { version = "1.0", features = ["derive"] }
image = "0.21.3" # For image processing
bincode = "1.3" # For serialization
mio = "1.0.2"
serde_json = "1.0.132"
libc = "0.2.161"
steganography = "1.0.2"
csv = "1.3.0"
